--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -1,19 +1,20 @@
 {% extends 'main/base.html' %}
 {%block content%}
 
+
     <section class="content-section" id="portfolio">
         <div class="container">
-          <div class="content-section-heading text-center">   
+          <!-- <div class="content-section-heading text-center">    -->
             {% if post.published_date %}
                 <div class="date">
                     {{ post.published_date }}
                 </div>
             {% endif %}
-            <h1>{{ post.title }}</h1>
+            <h1>{{ post.title }}</h1><hr>
             <p>{{ post.text|linebreaksbr }}</p>
-            <i>작가: {{post.author}}</i><br>
+            <i>작가: {{post.author}}</i><br><hr>
             <a href='{%url "main"%}'>뒤로가기</a>
-            </div>
+            <!-- </div> -->
         </div>
     </section>
 {% endblock %}
