포트폴리오 업로드 기능 추가

--- a/main/templates/main/post_new.html
+++ b/main/templates/main/post_new.html
@@ -4,15 +4,14 @@
 {%block content%}
 <section class="content-section" id="portfolio">
         <div class="container">
-                <h1>새 게시물 작성</h1>
-          <div class="content-section-heading text-center">   
-            
+                <h1>새 방명록 작성</h1><hr>
+          <div class="content-section-heading">  
             <form method = "POST" class="post-form">{% csrf_token %}
-                    {{ form.as_p }}
-            <button type="submit"class="save btn btn-default">저장</button>
+                {{ form.as_p }}
+                <button type="submit" class="save btn btn-default">저장</button>
             </form>
                     
-            </div>
+            </div><br>
             <a href='{%url "main"%}'>뒤로가기</a>
         </div>
     </section>
