--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -32,7 +32,7 @@ img{
         </div><br>
           <a href = "{%url 'download'%}">파일 다운받기</a>
        <br><br>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio-chart">포트폴리오나 쓰자</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="{% url 'new_portfolio' %}">포트폴리오나 쓰자</a>
         </div>
       </div>
     </div>
