--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,6 +19,7 @@
     <link href="{% static 'main/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="{% static 'main/vendor/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" href="">
 
     <!-- Custom CSS -->
     <link href="{% static 'main/css/stylish-portfolio.min.css' %}" rel="stylesheet">
