--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -17,6 +17,10 @@ img{
 
 {% block content %}
 
+<!-- <script src="{% static 'admin/js/jquery.init.js' %}"></script> -->
+
+
+
 <section class="content-section bg-light" id="portfolio">
     <div class="container text-center">
       <div class="row">
@@ -81,8 +85,9 @@ img{
       </div>
     </div>
   </div>
-  <link href="{% static 'portfolio/css/myportfolio.css' %}" rel="stylesheet">
+  
   <script src="{% static 'portfolio/js/port_script.js' %}"></script>
+  <link href="{% static 'portfolio/css/myportfolio.css' %}" rel="stylesheet">
   
 
 {% endblock %}
