--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,7 +13,7 @@
     <title>Hayeon's blog</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'main/vendor/bootstrap/css/bootstrap.min.CSS' %}" rel="stylesheet">
+    <link href="{% static 'main/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="{% static 'main/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
